add QR code at footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,14 @@
         </ul>
       </div>
 
+      <!-- QR code -->
       <div class="footer-col footer-col-2">
+        <ul class="contact-list">
+            <li><image src="/assets/images/blog.ray-xyz.com.gif" /></li>
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-3">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
