change qrcode pic

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
       <!-- QR code -->
       <div class="footer-col footer-col-2">
         <ul class="contact-list">
-            <li><image src="/assets/images/blog.ray-xyz.com.gif" /></li>
+            <li><image src="/assets/images/rayxyz_github_io.png" /></li>
         </ul>
       </div>
 
